11/05/2014 SPE no1: add rule to prevent text overflow on code elements

--- a/styles/style.css
+++ b/styles/style.css
@@ -33,11 +33,6 @@ p {
   margin-bottom:1em;
 }
 
-.content > p, .content > ul {
-
-width:90%;
-  
-}
 
 #logo-container {
   width:100%;
@@ -103,8 +98,20 @@ width:90%;
   margin-top:1em;
   padding:2em 0em 2em 2em;
   background-color:white;
+}
+
+.content > p, .content > ul {
+
+width:90%;
   
 }
+
+.content > ul {
+  
+  margin-left:2em;
+  
+}
+
 
 .rdf-graph {
   max-width:700px;
@@ -118,8 +125,12 @@ pre, .sample-queries {
   max-width:80%;
   border:dashed 1px #ccc;
   background:url(../images/paper_fibers.png) repeat;
+  
 }
 
+pre > code {
+white-space: pre-line;
+}
 
 #footer {
   float:left;
@@ -134,14 +145,14 @@ pre, .sample-queries {
    font-size:small;
    width:30%;
    padding:0em .5em 0em .5em;
-   text-wrap: unrestricted; 
 }
 
 .data-table-standard, .data-table-long {
   
   font-size:.75em;
   width: 95% !important;
-  
+
+} 
 
 #tabs {
   
